# embedded-so

./: .gitignore  Cargo.toml  LICENSE  README.md
libfoo/: CMakeLists.txt
libfoo/include/: libfoo.h
libfoo/src/: libfoo.c
src/: lib.rs  libfoo_sys.rs
src/libfoo_sys/: vendored.rs
